improve the interface and fix problems on mobile

--- a/docs/styles.css
+++ b/docs/styles.css
@@ -4,22 +4,20 @@ body {
     padding: 0;
 }
 
-
 #topbar {
     background-color: rgb(54, 54, 54);
     display: flex;
     align-items: center;
     color: white;
-    margin: 0;
-    padding: 0;
     position: fixed;
     justify-content: space-between;
     top: 0;
-    bottom: 0;
     left: 0;
     width: 100%;
-    min-height: 48px;
-    max-height: 48px;
+    height: 48px;
+    padding: 0 2vw;
+    z-index: 1000;
+    box-sizing: border-box;
 }
 
 @font-face {
@@ -31,37 +29,34 @@ body {
 
 #topbar #title {
     font-family: 'cs_regular';
-    font-size: 2.5vh;
-    text-align: left;
+    font-size: 2vh;
     transform: scaleY(1.25);
-    margin-left: 4vw;
     color: yellow;
     text-decoration: none;
-    flex-grow: 0;
+    white-space: nowrap;
+}
+
+#topbar #links {
+    display: flex;
+    gap: 1.5vw;
 }
 
 #topbar #links a {
     font-family: 'cs_regular';
     color: white;
-    text-align: right;
-    font-size: 2.5vh;
+    font-size: 1.8vh;
     text-decoration: none;
-    flex-grow: 0;
-    text-decoration: none;
-    margin-right: 3vw;
-}
-
-#topbar #links a {
-    margin-left: 2vw;
+    white-space: nowrap;
 }
 
 #intro {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 2vh;
+    font-size: 1.8vh;
     color: white;
     display: flex;
     justify-content: center;
-    margin-top: 15vh;
+    margin: 15vh 5vw 0 5vw;
+    text-align: center;
 }
 
 #lastvideo {
@@ -69,13 +64,14 @@ body {
     display: flex;
     justify-content: center;
     margin-top: 5vh;
+    flex-wrap: wrap;
 }
 
 #lastvideo iframe {
-    min-width: 40vw;
-    min-height: 45vh;
-    max-width: 40vw;
-    max-height: 45vh;
+    width: 50vw;
+    height: 28vh;
+    max-width: 560px;
+    border: none;
 }
 
 #download {
@@ -84,6 +80,8 @@ body {
     flex-direction: column;
     align-items: center;
     margin-top: 5vh;
+    text-align: center;
+    padding: 0 5vw;
 }
 
 #download #title {
@@ -94,21 +92,59 @@ body {
 }
 
 #download #versions {
+    display: flex;
+    flex-direction: column;
     align-items: center;
     margin-top: 2vh;
     gap: 1vh;
+    width: 100%;
 }
 
 #download #versions a {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 1vw;
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 17vw;
+    min-width: max-content;
+    max-width: 25vw;
     height: 6vh;
     text-align: center;
     text-decoration: none;
     color: white;
     background-color: rgb(54, 54, 54);
     border-radius: 5px;
+    padding: 0 2vw;
+    white-space: nowrap;
+}
+
+@media (max-width: 768px) {
+    #topbar {
+        flex-direction: column;
+        height: auto;
+        padding: 10px 0;
+    }
+    
+    #topbar #title {
+        font-size: 1.8vh;
+        margin-bottom: 5px;
+    }
+    
+    #topbar #links {
+        flex-direction: column;
+        gap: 5px;
+    }
+    
+    #lastvideo iframe {
+        width: 90vw;
+        height: 50vh;
+    }
+    
+    #download #versions a {
+        font-size: 3vw;
+        width: auto;
+        min-width: 60vw;
+        max-width: 85vw;
+        height: 7vh;
+    }
 }
